cmake_minimum_required(VERSION 2.6)
project(BaseAlgo)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(TOP_DIR  ${PROJECT_SOURCE_DIR})
set(SUBDIR conv)
set(INCLUDE_DIR ${TOP_DIR}/${SUBDIR}/src)
set(SOURCE_DIR ${TOP_DIR}/${SUBDIR}/src)
set(LIBRARY_DIR ${TOP_DIR}/lib/${SUBDIR})
set(LIBRARY_OUTPUT_PATH ${TOP_DIR}/lib/${SUBDIR})
set(EXECUTABLE_PATH ${TOP_DIR}/build/${SUBDIR})

message( STATUS "TOP_DIR: 	 ${TOP_DIR}")
message( STATUS "INCLUDE_DIR: 	 ${INCLUDE_DIR}")
message( STATUS "SOURCE_DIR: 	 ${SOURCE_DIR}")
message( STATUS "LIBRARY_DIR: 	 ${LIBRARY_DIR}")
message( STATUS "EXECUTABLE_PATH: 	 ${EXECUTABLE_PATH}")
message( STATUS "LIBRARY_OUTPUT_PATH: 	 ${LIBRARY_OUTPUT_PATH}") 


include_directories("/usr/local/include")
link_directories("/usr/local/lib")
link_directories(${LIBRARY_DIR})
include_directories(${INCLUDE_DIR})
include_directories(${TOP_DIR}/common)
add_subdirectory(${SUBDIR})
